Changed name on bootstrap-html-docs to index and moved it

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <nav-item location="/corporate-ui-docs/corporate-ui/">Corporate UI
           <sub-navigation caption="Corporate UI">
             <nav-item location="/corporate-ui-docs/corporate-ui/">About</nav-item>
-            <nav-item location="/corporate-ui-docs/corporate-ui/bootstrap-original-docs.html">Components</nav-item>
+            <nav-item location="/corporate-ui-docs/corporate-ui/components/">Components</nav-item>
             <nav-item location="/corporate-ui-docs/corporate-ui/html-copy-paste/" >HTML copy paste</nav-item>
             <nav-item location="/corporate-ui-docs/corporate-ui/corporate-ui-for-frameworks.html">JS Frameworks</nav-item>
             <nav-item location="/corporate-ui-docs/corporate-ui/faq.html">FAQ</nav-item>
@@ -81,7 +81,7 @@
           <div class="col-md-4 col-sm-4 col-xs-12">
             <a href="/corporate-ui-docs/corporate-ui/"><img src="/corporate-ui-docs/images/templates-sample.svg"></a>
             <h4>Corporate UI</h4>
-            <p>If you're a UI Designer please pick the correct patterns from the <a href="/corporate-ui-docs/corporate-ui/bootstrap-original-docs.html">Corporate UI Design System</a>.</p>
+            <p>If you're a UI Designer please pick the correct patterns from the <a href="/corporate-ui-docs/corporate-ui/components/">Corporate UI Design System</a>.</p>
           </div>
           <div class="col-md-4 col-sm-4 col-xs-12">
             <!-- <a href="/corporate-ui-docs/mobile-apps/"><img src="/corporate-ui-docs/images/templates-sample.svg"></a> -->
