--- a/surveys/js-coding-standards-rnd2/standards-results.html
+++ b/surveys/js-coding-standards-rnd2/standards-results.html
@@ -86,7 +86,7 @@
         <nav-item location="/corporate-ui-docs/styleguide/">Style Guide</nav-item>            
         <nav-item location="/corporate-ui-docs/corporate-ui/" class="active">Web Applications
           <sub-navigation caption="Scania Bootstrap">
-            <nav-item location="/corporate-ui-docs/corporate-ui/bootstrap-original-docs.html">Bootstrap Documentation</nav-item>
+            <nav-item location="/corporate-ui-docs/corporate-ui/components/">Bootstrap Documentation</nav-item>
             <nav-item location="/corporate-ui-docs/corporate-ui/html-copy-paste/">HTML Copy Paste</nav-item>
           </sub-navigation>  
         </nav-item>
