--- a/corporate-ui/html-copy-paste/index.html
+++ b/corporate-ui/html-copy-paste/index.html
@@ -30,8 +30,8 @@
             <nav-item location="/corporate-ui-docs/corporate-ui/">About</nav-item>
             <nav-item location="/corporate-ui-docs/corporate-ui/components/">Components</nav-item>
             <nav-item location="/corporate-ui-docs/corporate-ui/html-copy-paste/" class="active">HTML copy paste</nav-item>
-            <nav-item location="/corporate-ui-docs/corporate-ui/corporate-ui-for-frameworks.html">JS Frameworks</nav-item>
-            <nav-item location="/corporate-ui-docs/corporate-ui/faq.html">FAQ</nav-item>
+            <nav-item location="/corporate-ui-docs/corporate-ui/frameworks/">JS Frameworks</nav-item>
+            <nav-item location="/corporate-ui-docs/corporate-ui/faq/">FAQ</nav-item>
             <nav-item location="/corporate-ui-docs/corporate-ui/contact-us.html">Contact Us</nav-item>
           </sub-navigation>
         </nav-item>
