Fixed image urls with uppercase

--- a/mobile-apps/mobile-example/mobile-example.html
+++ b/mobile-apps/mobile-example/mobile-example.html
@@ -57,31 +57,31 @@
                     <p>To get your hands dirty by playing with the code, <a href="https://s3-eu-west-1.amazonaws.com/scaniademoappsourcecode/DemoAppSourceCode_v1.1.zip">click here</a> to get to the source code</p>
                     <p>Happy Coding!</p>
                     <div class="col-md-4"style=" margin-bottom: 5%;">
-                      <div><h6>Bottom Navigation</h6> <img src = "../../images/Scania_Demo_App_1.JPG" alt="Bottom Navigation View" style="width: 75%"></div>
+                      <div><h6>Bottom Navigation</h6> <img src = "../../images/Scania_Demo_App_1.jpg" alt="Bottom Navigation View" style="width: 75%"></div>
                     </div>
                     <div class="col-md-4"style=" margin-bottom: 5%;">
-                      <div><h6>Navigation Drawer</h6> <img src = "../../images/Scania_Demo_App_2.JPG" alt="Bottom Navigation View" style="width: 75%"></div>
+                      <div><h6>Navigation Drawer</h6> <img src = "../../images/Scania_Demo_App_2.jpg" alt="Bottom Navigation View" style="width: 75%"></div>
                     </div>
                     <div class="col-md-4"style="margin-bottom: 5%;">
-                      <div><h6>TabLayout</h6> <img src = "../../images/Scania_Demo_App_3.JPG" alt="Bottom Navigation View" style="width: 75%"></div>
+                      <div><h6>TabLayout</h6> <img src = "../../images/Scania_Demo_App_3.jpg" alt="Bottom Navigation View" style="width: 75%"></div>
                     </div>
                     <div class="col-md-12">
                       <div class="col-md-4"style=" margin-bottom: 5%;">
-                        <div><h6>List View</h6> <img src = "../../images/Scania_Demo_App_4.JPG" alt="Bottom Navigation View" style="width: 75%;"></div>
+                        <div><h6>List View</h6> <img src = "../../images/Scania_Demo_App_4.jpg" alt="Bottom Navigation View" style="width: 75%;"></div>
                       </div>
                       <div class="col-md-4"style="margin-bottom: 5%;">
-                        <div><h6>Profile Page</h6> <img src = "../../images/Scania_Demo_App_5.JPG" alt="Bottom Navigation View" style="width: 75%; "></div>
+                        <div><h6>Profile Page</h6> <img src = "../../images/Scania_Demo_App_5.jpg" alt="Bottom Navigation View" style="width: 75%; "></div>
                       </div>
                       <div class="col-md-4"style="margin-bottom: 5%;">
-                        <div><h6>Login Page</h6> <img src = "../../images/Scania_Demo_App_6.JPG" alt="Bottom Navigation View"style="width: 75%;"></div>
+                        <div><h6>Login Page</h6> <img src = "../../images/Scania_Demo_App_6.jpg" alt="Bottom Navigation View"style="width: 75%;"></div>
                       </div> 
                     </div>
                     <div class="col-md-12">
                       <div class="col-md-4"style=" margin-bottom: 5%;">
-                        <div><h6>Splash Screen</h6> <img src = "../../images/Scania_Demo_App_7.JPG" alt="Bottom Navigation View" style="width: 68%;"></div>
+                        <div><h6>Splash Screen</h6> <img src = "../../images/Scania_Demo_App_7.jpg" alt="Bottom Navigation View" style="width: 68%;"></div>
                       </div>
                       <div class="col-md-4"style=" margin-bottom: 5%;">
-                        <div><h6>Card View</h6> <img src = "../../images/Scania_Demo_App_9.JPG" alt="Bottom Navigation View" style="width: 75%;"></div>
+                        <div><h6>Card View</h6> <img src = "../../images/Scania_Demo_App_9.jpg" alt="Bottom Navigation View" style="width: 75%;"></div>
                       </div>
                     </div>
                 </div>
