--- a/mobile-apps/mobile-docs/mobile-docs.html
+++ b/mobile-apps/mobile-docs/mobile-docs.html
@@ -53,7 +53,7 @@
               <center><h1>Scania Demo App</h1></center>
               <h2>Bottom Navigation View</h2>
               <p>Bottom navigation bars allow movement between primary destinations in an app.</p>
-              <img src = "../../images/Scania_Demo_App_1.JPG" alt="Bottom Navigation View" style="width:25%;height:25%;">
+              <img src = "../../images/Scania_Demo_App_1.jpg" alt="Bottom Navigation View" style="width:25%;height:25%;">
               <h5>Usage</h5>
               <p>Bottom navigation bars display three to five destinations at the bottom of a screen. Each destination is represented by an icon and an optional text label. When a bottom navigation icon is tapped, the user is taken to the top-level navigation destination associated with that icon.</p>
               <ul>
@@ -102,7 +102,7 @@
               <h2>Navigation Drawer</h2>
               <p>Navigation drawers use a scrim to block interaction with the rest of an app’s content. They are elevated above most app elements and don’t affect the screen’s layout grid.</p>
               <p>They are primarily for use on mobile, where screen space is limited. They can be replaced by standard drawers on tablet and desktop.</p>
-              <img src = "../../images/Scania_Demo_App_2.JPG" alt="Navigation Drawer" style="width:25%;height:25%;">
+              <img src = "../../images/Scania_Demo_App_2.jpg" alt="Navigation Drawer" style="width:25%;height:25%;">
               <h5>Usage</h5>
               <p>Navigation drawers provide access to destinations and app functionality, such as switching accounts. They can either be permanently on-screen or controlled by a navigation menu icon.</p>
               <h5>Navigation drawers are recommended for:</h5>
@@ -145,7 +145,7 @@
               <p>Navigation drawers can be vertically scrolled, independent of the rest of the screen’s content and UI. If the list of navigation destinations is longer than the height of the drawer, the drawer’s contents can be scrolled within the drawer.</p>
               <h2>Tabs</h2>
               <p>Tabs organize content across different screens, data sets, and other interactions.</p>
-              <img src = "../../images/Scania_Demo_App_3.JPG" alt="Tab Layout" style="width:25%;height:25%;">
+              <img src = "../../images/Scania_Demo_App_3.jpg" alt="Tab Layout" style="width:25%;height:25%;">
               <h5>Tab Principles</h5>
               <ul>
                   <li>As tabs can scroll horizontally, a UI can have as many tabs as needed.</li>
@@ -177,7 +177,7 @@
               </ul>
               <h2>Lists</h2>
               <p>Lists are continuous, vertical indexes of text or images.</p>
-              <img src = "../../images/Scania_Demo_App_4.JPG" alt="List View" style="width:25%;height:25%;">
+              <img src = "../../images/Scania_Demo_App_4.jpg" alt="List View" style="width:25%;height:25%;">
               <h5>Usage </h5>
               <p>Lists are a continuous group of text or images. They are composed of items containing primary and supplemental actions, which are represented by icons and text.</p>
               <ul>
@@ -188,18 +188,18 @@
               <h5>Dividers</h5>
               <p>The structure of a list can be clarified using dividers.</p>
               <h2>Profile Page</h2>
-              <img src = "../../images/Scania_Demo_App_5.JPG" alt="Profile Page" style="width:25%;height:25%;">
+              <img src = "../../images/Scania_Demo_App_5.jpg" alt="Profile Page" style="width:25%;height:25%;">
               <h5>Usage</h5>
               <p>A user profile has a set of default fields, such as email, phone number, and language. You can also extend the default user profile by adding custom fields that are specific to your business. </p>
               <h5>Note</h5>
               <p>The user profile should always follow the Scania Standard UI/UX Guidelines to meet the Goals of Scania Identity.</p>
               <h2>Login Form</h2>
-              <img src = "../../images/Scania_Demo_App_6.JPG" alt="Login Form" style="width:25%;height:25%;">
+              <img src = "../../images/Scania_Demo_App_6.jpg" alt="Login Form" style="width:25%;height:25%;">
               <h5>Usage</h5>
               <p>It is mandatory (Scania internal Apps) that you follow  the login form provided with this app if your application is intended to have Login/Logout. </p>
               <h2>Splash Screen</h2>
               <p>Splash Screen is often referred to a welcome screen or user’s first experience of an application. </p>
-              <img src = "../../images/Scania_Demo_App_7.JPG" alt="Splash Screen" style="width:25%;height:25%;">
+              <img src = "../../images/Scania_Demo_App_7.jpg" alt="Splash Screen" style="width:25%;height:25%;">
               <h5>Usage</h5>
               <p>Launch screens can be displayed upon an app’s launch from the home screen when an app loads, instead of displaying a blank screen. Displaying a launch screen can decrease the sense of a long load time, and has the potential to add delight to the user experience.</p>
               <p>Launch screens shouldn’t be displayed if an app is running.</p>
