fixed menu for mobile-apps after merge of new documentation

--- a/surveys/index.html
+++ b/surveys/index.html
@@ -30,7 +30,14 @@
             <nav-item location="/corporate-ui-docs/corporate-ui/html-copy-paste/">HTML Copy Paste</nav-item>
           </sub-navigation>  
         </nav-item>
-        <nav-item location="/corporate-ui-docs/mobile-apps/">Mobile Apps</nav-item>
+        <nav-item location="/corporate-ui-docs/mobile-apps/">Mobile Apps
+          <sub-navigation caption="Mobile Apps">
+            <nav-item location="/corporate-ui-docs/mobile-apps/">Overview</nav-item>
+            <nav-item location="/corporate-ui-docs/mobile-apps/mobile-docs/mobile-docs.html">Documentation</nav-item>
+            <nav-item location="/corporate-ui-docs/mobile-apps/mobile-example/mobile-example.html">Example</nav-item>
+            <nav-item location="/corporate-ui-docs/mobile-apps/mobile-contact/mobile-contact.html">Contact us</nav-item>
+          </sub-navigation>
+        </nav-item>
         <nav-item location="https://github.com/scania/corporate-ui/issues">Report an Issue</nav-item>
         <nav-item location="/corporate-ui-docs/corporate-ui/contact-us.html">Contact Us</nav-item>
       </primary-items>
