Small fix with content for index and mobile apps index

--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
     <section class="light ux-sections">
       <div class="container text-center page-header">
         <h1>UX Library<small>For the Corporate UI<br />Design System</small></h1>
-        <p>Welcome to the all-new Scania UX Library. Here you'll find information about how to implement and use our new design elements like the logotype, fonts, icons and web components. The UX Library serves a big audience and many types of stakeholders. Please select the appropriate section for you particular needs.</p>
+        <p>Welcome to Scania UX Library. Here you'll find information about how to implement and use our new design elements like the logotype, fonts, icons and web components. The UX Library serves a big audience and many types of stakeholders. Please select the appropriate section for you particular needs.</p>
 
         <div class="row">
           <div class="col-md-4 col-sm-4 col-xs-12">
             <a href="/corporate-ui-docs/corporate-ui/"><img src="/corporate-ui-docs/images/templates-sample.svg"></a>
             <h4>Corporate UI</h4>
-            <p>If you're a UI Designer please pick the correct patterns from the <a href="/corporate-ui-docs/corporate-ui/components/">Corporate UI Design System</a>.</p>
+            <p>If you're a Designer or Developer please pick the correct patterns from the <a href="/corporate-ui-docs/corporate-ui/components/">Corporate UI Design System</a>.</p>
           </div>
           <div class="col-md-4 col-sm-4 col-xs-12">
             <!-- <a href="/corporate-ui-docs/mobile-apps/"><img src="/corporate-ui-docs/images/templates-sample.svg"></a> -->
