Moved template folder under corporate-ui, added edit docs link and changed some absolute paths to relative
- Added edit docs link
- changed some absolute paths to relative example html-mail

--- a/corporate-ui/html-copy-paste/index.html
+++ b/corporate-ui/html-copy-paste/index.html
@@ -18,6 +18,7 @@
 
  <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
     <nav-item location="https://github.com/scania/corporate-ui">GitHub</nav-item>
+    <nav-item location="https://github.com/scania/corporate-ui-docs">Edit Docs</nav-item>
   </c-corporate-header>
 
   <c-main-content>
@@ -59,7 +60,7 @@
     </c-main-navigation>
 
     <section class="light">
-      <link rel="import" href="https://scania.github.io/corporate-ui-docs/template/html-copy-paste/c-html-copy-paste.html">
+      <link rel="import" href="/corporate-ui-docs/corporate-ui/html-copy-paste/c-html-copy-paste.html">
       <c-html-copy-paste fullbleed></c-html-copy-paste>
     </section>
   </c-main-content>
