--- a/corporate-ui/index.html
+++ b/corporate-ui/index.html
@@ -22,6 +22,7 @@
 
  <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
     <nav-item location="https://github.com/scania/corporate-ui">GitHub</nav-item>
+    <nav-item location="https://github.com/scania/corporate-ui-docs">Edit Docs</nav-item>
   </c-corporate-header>
 
   <c-main-content>
@@ -91,7 +92,7 @@
           <p>In the UX Library you'll find a lot of ready to use elements and components ranging from a standalone Scania Corporate Header including our wordmark and logotype, to advanced Product Carousels and Tables with sorting, filtering and responsive utilities. </p>
           <p>You'll find many components in the <a href="https://github.com/scania/corporate-ui">Corporate UI GitHub Repository</a>.</p>
           <h3>Standard HTML Template</h3>
-          <p>If your solution is a traditional website it is very straight forward to start using Corporate UI. Download <a href="../template/basic-template-app.html" target="_blank">this basic template for applications</a> or this <a href="../template/basic-template.html" target="_blank">this basic template for public sites</a>. Then open it in your browser to explore our custom and standard HTML elements. Then reuse code samples from Scania Bootstrap to create the user interface.</p>
+          <p>If your solution is a traditional website it is very straight forward to start using Corporate UI. Download <a href="../corporate-ui/template/basic-template-app.html" target="_blank">this basic template for applications</a> or this <a href="../corporate-ui/template/basic-template.html" target="_blank">this basic template for public sites</a>. Then open it in your browser to explore our custom and standard HTML elements. Then reuse code samples from Scania Bootstrap to create the user interface.</p>
 
           <h3>Using Corporate UI with frameworks</h3>
           <p>If you're creating an application using Angular, React or equivalent - you basically will use the same code as on the templates shown above. But there are <a href="/corporate-ui-docs/corporate-ui/frameworks/">a few things to that you must do differently</a>.</p>
