--- a/styleguide/colours/all-colors.html
+++ b/styleguide/colours/all-colors.html
@@ -58,6 +58,7 @@
 <body class="scania">  
  <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
     <nav-item location="https://github.com/scania/corporate-ui">GitHub</nav-item>
+    <nav-item location="https://github.com/scania/corporate-ui-docs">Edit Docs</nav-item>
   </c-corporate-header>
 
   <c-main-content>
