--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -40,6 +40,7 @@
 
  <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
     <nav-item location="https://github.com/scania/corporate-ui">GitHub</nav-item>
+    <nav-item location="https://github.com/scania/corporate-ui-docs">Edit Docs</nav-item>
   </c-corporate-header>
 
   <c-main-content>
@@ -112,9 +113,9 @@
           </div>
 
           <div class="col-md-4 col-sm-4 col-xs-12">
-            <a href="/corporate-ui-docs/styleguide/Scania Identity Manual_201609.pdf" target="_blank"><img src="/corporate-ui-docs/images/identity-manual.svg"></a>
+            <a href="/corporate-ui-docs/styleguide/identity-manual/Scania Identity Manual_201609.pdf" target="_blank"><img src="/corporate-ui-docs/images/identity-manual.svg"></a>
             <h4 class="">Identity Manual</h4>
-            <p>Whatever design elements from the UX Library that you're going to use, please see to it that it follows the guidelines found in the <a href="/corporate-ui-docs/styleguide/Scania Identity Manual_201609.pdf" target="_blank">Scania Identity Manual</a> as it is this manual that is reflected in the UX Library.</p>
+            <p>Whatever design elements from the UX Library that you're going to use, please see to it that it follows the guidelines found in the <a href="/corporate-ui-docs/styleguide/identity-manual/Scania Identity Manual_201609.pdf" target="_blank">Scania Identity Manual</a> as it is this manual that is reflected in the UX Library.</p>
           </div>
         </div>
 
