--- a/mobile-apps/mobile-contact/mobile-contact.html
+++ b/mobile-apps/mobile-contact/mobile-contact.html
@@ -21,7 +21,7 @@
     </style>
 </head>
 
-<body class="scania app">
+<body class="scania app light">
   <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
     <nav-item location="https://github.com/scania/corporate-ui">GitHub</nav-item>
     <nav-item location="https://github.com/scania/corporate-ui-docs">Edit Docs</nav-item>
