--- a/corporate-ui/contact-us.html
+++ b/corporate-ui/contact-us.html
@@ -26,8 +26,6 @@
 <body class="scania app light">
 
  <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
-    <nav-item location="https://github.com/scania/corporate-ui">GitHub</nav-item>
-    <nav-item location="https://github.com/scania/corporate-ui-docs">Edit Docs</nav-item>
   </c-corporate-header>
   <c-main-content>
     <c-main-navigation>
@@ -63,7 +61,7 @@
         </primary-items>
 
         <secondary-items>
-          <nav-item> <a href="https://www.scania.com/ux-library/en/home.html" target="_blank">Comon editors<i class="scania-icon-share-page-tool xs"></i></a></nav-item>
+          <nav-item> <a href="https://www.scania.com/ux-library/en/home.html" target="_blank">Comon editors<i class="fal fa-external-link ml-2"></i></a></nav-item>
         </secondary-items>
       </c-main-navigation>
 
