Updated landing page img and nav-items in footer
- Smaller image in landing page
- Added items in the footer on most pages

--- a/corporate-ui/frameworks/index.html
+++ b/corporate-ui/frameworks/index.html
@@ -108,7 +108,10 @@ export class AppComponent {
       </section>
     </c-main-content>
 
-  <c-corporate-footer></c-corporate-footer>
+    <c-corporate-footer>
+      <nav-item><a href="https://github.com/scania/corporate-ui" target="_blank">Github</a></nav-item>
+      <nav-item location="mailto:corporate-ui@scania.com">Contact</nav-item>
+    </c-corporate-footer>
 
   <script src="/corporate-ui-docs/js/ux-lib.js"></script>
 
