--- a/styleguide/colours/all-colors.html
+++ b/styleguide/colours/all-colors.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en-GB" class="corporate-ui">
 <head>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta charset="utf-8">
   <noscript><meta http-equiv="refresh" content="0;url=https://static.scania.com/vendors/components/pure-js/nonJS-browsers/1.0.0/nonJS-browsers.html"></noscript>
   <title>UX Library - Colours</title>
   <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
-  <script src="https://static.scania.com/vendors/frameworks/jQuery/1.11.3/jquery-1.11.3.min.js"></script>   
+  <script src="https://static.scania.com/vendors/frameworks/jQuery/1.11.3/jquery-1.11.3.min.js"></script>
   <script src="https://static.scania.com/build/global/3.5.3/js/corporate-ui.js"></script>
 
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113165423-1"></script>  
-  <script src="/corporate-ui-docs/js/google-analytics.js"></script>  
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113165423-1"></script>
+  <script src="/corporate-ui-docs/js/google-analytics.js"></script>
 
 
   <link rel="stylesheet" href="/corporate-ui-docs/css/ux-lib.css">
-  <style type="text/css">    
+  <style type="text/css">
 
 		span[class^="color-"],
 		span[class^="bg-"],
@@ -55,7 +55,7 @@
 	</style>
 
 </head>
-<body class="scania">  
+<body class="scania"> 
  <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
   </c-corporate-header>
 
@@ -98,7 +98,7 @@
 		</c-main-navigation>
 
 		<section class="light">
-			<div class="container-fluid">	
+			<div class="container-fluid">
 				<article class="foreground">
 					<h1>CSS Classes for UI colouring</h1>
 					<h2>Foreground colouring</h2>
@@ -108,13 +108,13 @@
 						<div class="col-lg-2 col-md-4 col-sm-6 col-xs-12">
 							<span class="color-brand-01"><span class="default">color-brand-01</span>S</span>
 						</div>	
-						<div class="col-lg-2 col-md-4 col-sm-6 col-xs-12">					 
+						<div class="col-lg-2 col-md-4 col-sm-6 col-xs-12">
 							<span class="color-brand-02"><span class="default">color-brand-02</span>S</span>
 						</div>	
-						<div class="col-lg-2 col-md-4 col-sm-6 col-xs-12">						
+						<div class="col-lg-2 col-md-4 col-sm-6 col-xs-12">
 							<span class="color-brand-03"><span class="default">color-brand-03</span>S</span>
 						</div>	
-						<div class="col-lg-2 col-md-4 col-sm-6 col-xs-12">						
+						<div class="col-lg-2 col-md-4 col-sm-6 col-xs-12">
 							<span class="color-primary-01"><span class="default">color-primary-01</span>S</span>
 						</div>	
 						<div class="col-lg-2 col-md-4 col-sm-6 col-xs-12">	
@@ -220,7 +220,7 @@
 						<div class="col-lg-2 col-md-4 col-sm-6 col-xs-12">	
 							<span class="bg-brand-03"><span class="default">bg-brand-03</span></span>
 						</div>
-					</div>	
+					</div>
 					<div class="row">						
 						<div class="col-lg-2 col-md-4 col-sm-6 col-xs-12">	
 							<span class="bg-primary-01"><span class="default">bg-primary-01</span></span>
@@ -234,7 +234,7 @@
 						<div class="col-lg-2 col-md-4 col-sm-6 col-xs-12">	
 							<span class="bg-primary-04"><span class="default">bg-primary-04</span></span>
 						</div>
-					</div>	
+					</div>
 					<div class="row">						
 						<div class="col-lg-2 col-md-4 col-sm-6 col-xs-12">	
 							<span class="bg-secondary-01"><span class="default">bg-secondary-01</span></span>
@@ -248,7 +248,7 @@
 						<div class="col-lg-2 col-md-4 col-sm-6 col-xs-12">	
 							<span class="bg-secondary-04"><span class="default">bg-secondary-04</span></span>
 						</div>
-					</div>	
+					</div>
 					<div class="row">							
 						<div class="col-lg-2 col-md-4 col-sm-6 col-xs-12">	
 							<span class="bg-tertiary-01"><span class="default">bg-tertiary-01</span></span>
@@ -271,7 +271,7 @@
 						<div class="col-lg-2 col-md-4 col-sm-6 col-xs-12">	
 							<span class="bg-tertiary-07"><span class="default">bg-tertiary-07</span></span>
 						</div>
-					</div>	
+					</div>
 					<div class="row">						
 						<div class="col-lg-2 col-md-4 col-sm-6 col-xs-12">	
 							<span class="bg-grey1"><span class="default">bg-grey1</span></span>
@@ -300,7 +300,7 @@
 						<div class="col-lg-2 col-md-4 col-sm-6 col-xs-12">	
 							<span class="bg-grey9"><span class="default">bg-grey9</span></span>
 						</div>
-					</div>	
+					</div>
 					<div class="row">
 						<div class="col-lg-2 col-md-4 col-sm-6 col-xs-12">	
 							<span class="bg-primary"><span class="default">bg-primary</span></span>
@@ -320,7 +320,7 @@
 						<div class="col-lg-2 col-md-4 col-sm-6 col-xs-12">
 							<span class="bg-default"><span class="default">bg-default</span></span>
 						</div>					
-					</div>	
+					</div>
 					<div class="row">							
 						<div class="col-lg-2 col-md-4 col-sm-6 col-xs-12">	
 							<span class="bg-primary-bright"><span class="default">bg-primary-bright</span></span>
@@ -340,7 +340,7 @@
 						<div class="col-lg-2 col-md-4 col-sm-6 col-xs-12">
 							<span class="bg-default-bright"><span class="default">bg-default-bright</span></span>
 						</div>						
-					</div>	
+					</div>
 					<div class="row">							
 						<div class="col-lg-2 col-md-4 col-sm-6 col-xs-12">
 							<span class="bg-half-primary"><span class="default">bg-half-primary</span></span>
@@ -357,7 +357,7 @@
 						<div class="col-lg-2 col-md-4 col-sm-6 col-xs-12">	
 							<span class="bg-half-info"><span class="default">bg-half-info</span></span>
 						</div>
-					</div>	
+					</div>
 					<div class="row">						
 						<div class="col-lg-2 col-md-4 col-sm-6 col-xs-12">	
 							<span class="chart-series-01"><span class="default">chart-series-01</span></span>
@@ -389,27 +389,30 @@
 						<div class="col-lg-2 col-md-4 col-sm-6 col-xs-12">	
 							<span class="chart-series-10"><span class="default">chart-series-10</span></span>
 						</div>
-					</div>	
+					</div>
 					<div class="row">							
 						<div class="col-lg-2 col-md-4 col-sm-6 col-xs-12">	
 							<span class="bg-gradient-01"><span class="default">bg-gradient-01</span></span>
 						</div>
-					</div>	
-					<div class="row">							
-						<div class="col-lg-2 col-md-4 col-sm-6 col-xs-12">	
+					</div>
+					<div class="row">
+						<div class="col-lg-2 col-md-4 col-sm-6 col-xs-12">
 							<span class="bg-cross"><span class="default">bg-cross</span></span>
 						</div>
-					</div>	
-					<div class="row">							
-						<div class="col-lg-2 col-md-4 col-sm-6 col-xs-12">	
+					</div>
+					<div class="row">
+						<div class="col-lg-2 col-md-4 col-sm-6 col-xs-12">
 							<span class="bg-disabled"><span class="default">bg-disabled</span></span>
-						</div>	
-					</div>			
+						</div>
+					</div>
 				</article>
 			</div>
 		</section>
-	</c-main-content>  
-<c-corporate-footer></c-corporate-footer>		
+	</c-main-content>
+	<c-corporate-footer>
+		<nav-item><a href="https://github.com/scania/corporate-ui" target="_blank">Github</a></nav-item>
+		<nav-item location="mailto:corporate-ui@scania.com">Contact</nav-item>
+	</c-corporate-footer>
 <script src="/corporate-ui-docs/js/ux-lib.js"></script>
 <link rel="stylesheet" href="/corporate-ui-docs/css/ux-lib.css">
 </body>
