--- a/styleguide/icons/index.html
+++ b/styleguide/icons/index.html
@@ -2367,12 +2367,10 @@
                     <a href="https://static.scania.com/resources/icons/scania/SVG_ZIP/103_Link-icon.zip" download>SVG Vector</a>
                     <a href="https://static.scania.com/resources/icons/scania/PNG_ZIP/103_Link-icon.zip" download>PNG Bitmap</a>
                 </td>
-
-               
                 <td></td>
                 <td></td>
                 <td></td>
-            </tr> 
+            </tr>
 
              <tr>
                 <td>104</td>
@@ -2386,21 +2384,23 @@
                     <a href="https://static.scania.com/resources/icons/scania/SVG_ZIP/103_Link-icon.zip" download>SVG Vector</a>
                     <a href="https://static.scania.com/resources/icons/scania/PNG_ZIP/103_Link-icon.zip" download>PNG Bitmap</a> -->
                 </td>
-
-               
                 <td></td>
                 <td></td>
                 <td></td>
-            </tr>  
+            </tr>
         </tbody>
     </table>
-  </div>    
+  </div>
 </div>
 </section>
 
 
   </c-main-content>
-  <c-corporate-footer></c-corporate-footer>
+
+  <c-corporate-footer>
+    <nav-item><a href="https://github.com/scania/corporate-ui" target="_blank">Github</a></nav-item>
+    <nav-item location="mailto:corporate-ui@scania.com">Contact</nav-item>
+  </c-corporate-footer>
 
   <script src="/corporate-ui-docs/js/ux-lib.js"></script>
 </body>
