--- a/styleguide/typography/index.html
+++ b/styleguide/typography/index.html
@@ -217,8 +217,8 @@
                 </tr>
                 <tr>
                   <td><h6>Header 6</h6></td>
-                  <td><xmp><h6>Your text</h6></xmp></td>         
-                </tr>   
+                  <td><xmp><h6>Your text</h6></xmp></td>
+                </tr>
               </tbody>
               </table>
             </div>
@@ -231,7 +231,7 @@
             <p>All Scania Sans fonts are available in cyrillic versions. They are included in the Corporate UI setup. If needed for applications on a stand alone basis, then include the CSS mentioned above and the cyrillic fonts will be loaded when needed.</p>
             <div class="table-responsive">
               <table class="table" style="font-size:20px">
-              <tbody>        
+              <tbody>
                 <tr>
                   <td style="font-family:'Scania Sans'">Лорем ипсум долор сит амет</td>
                   <td style="font-family:'Scania Sans'">Scania Sans Regular</td>
@@ -247,7 +247,7 @@
                 <tr>
                   <td style="font-family:'Scania Sans Headline'">Яуи иусто омниум но</td>
                   <td style="font-family:'Scania Sans Headline'">Scania Sans Headline</td>
-                </tr>                
+                </tr>
                 <tr>
                   <td style="font-family:'Scania Sans Headline Bold'">ин денияуе репримияуе пер</td>
                   <td style="font-family:'Scania Sans Headline Bold'">Scania Sans Headline Bold</td>
@@ -263,7 +263,7 @@
                 <tr>
                   <td style="font-family:'Scania Sans Condensed Italic'">ан сеа епицури пертинациа</td>
                   <td style="font-family:'Scania Sans Condensed Italic'">Scania Sans Condensed Italic</td>
-                </tr> 
+                </tr>
               </tbody>
               </table>
             </div>
@@ -273,7 +273,10 @@
 
   </c-main-content>
 
-  <c-corporate-footer></c-corporate-footer>
+  <c-corporate-footer>
+    <nav-item><a href="https://github.com/scania/corporate-ui" target="_blank">Github</a></nav-item>
+    <nav-item location="mailto:corporate-ui@scania.com">Contact</nav-item>
+  </c-corporate-footer>
 
   <script src="/corporate-ui-docs/js/ux-lib.js"></script>
 </body>
