--- a/corporate-ui/faq/index.html
+++ b/corporate-ui/faq/index.html
@@ -292,7 +292,10 @@
       </div>
     </section>
   </c-main-content>
-  <c-corporate-footer></c-corporate-footer>
+  <c-corporate-footer>
+    <nav-item><a href="https://github.com/scania/corporate-ui" target="_blank">Github</a></nav-item>
+    <nav-item location="mailto:corporate-ui@scania.com">Contact</nav-item>
+  </c-corporate-footer>
   <script src="/corporate-ui-docs/js/ux-lib.js"></script>
 </body>
 </html>
