--- a/corporate-ui/html-copy-paste/index.html
+++ b/corporate-ui/html-copy-paste/index.html
@@ -16,9 +16,7 @@
 
 <body class="scania app">
 
- <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
-  </c-corporate-header>
-
+  <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/"></c-corporate-header>
   <c-main-content>
     <c-main-navigation>
       <primary-items>
@@ -62,7 +60,10 @@
       <c-html-copy-paste fullbleed></c-html-copy-paste>
     </section>
   </c-main-content>
-  <c-corporate-footer></c-corporate-footer>
+  <c-corporate-footer>
+    <nav-item><a href="https://github.com/scania/corporate-ui" target="_blank">Github</a></nav-item>
+    <nav-item location="mailto:corporate-ui@scania.com">Contact</nav-item>
+  </c-corporate-footer>
 
 </body>
 </html>
