--- a/index.html
+++ b/index.html
@@ -89,7 +89,6 @@
             <p>If you're a Designer or Developer please pick the correct patterns from the <a href="/corporate-ui-docs/corporate-ui/components/">Corporate UI Design System</a>.</p>
           </div>
           <div class="col-md-4 col-sm-4 col-xs-12">
-            <!-- <a href="/corporate-ui-docs/mobile-apps/"><img src="/corporate-ui-docs/images/templates-sample.svg"></a> -->
             <a href="/corporate-ui-docs/mobile-apps/"><img class="mobile-apps" src="/corporate-ui-docs/images/interaction.svg"></a>
             <h4>Mobile Apps</h4>
             <p>Developing a native mobile application differs from developing for the web.</p>
@@ -105,6 +104,7 @@
   </c-main-content>
 
   <c-corporate-footer>
+    <nav-item><a href="https://github.com/scania/corporate-ui" target="_blank">Github</a></nav-item>
     <nav-item location="mailto:corporate-ui@scania.com">Contact</nav-item>
   </c-corporate-footer>
 
