--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -122,9 +122,10 @@
   </c-main-content>
 
   <c-corporate-footer>
-    <nav-item location="/corporate-ui-docs/corporate-ui/contact-us.html">Contact Us</nav-item>
+    <nav-item><a href="https://github.com/scania/corporate-ui" target="_blank">Github</a></nav-item>
     <nav-item location="mailto:corporate-ui@scania.com">Contact</nav-item>
   </c-corporate-footer>
+
   <script src="/corporate-ui-docs/js/ux-lib.js"></script>
 </body>
 </html>
