--- a/corporate-ui/frameworks/index.html
+++ b/corporate-ui/frameworks/index.html
@@ -97,7 +97,7 @@ export class AppComponent {
           </xmp>
 
           <p>
-            <a href="../corporate-ui/template/Angular5/src.zip" class="btn btn-default" download>Download Angular 5 Sample Files</a>
+            <a href="/corporate-ui-docs/corporate-ui/template/Angular5/src.zip" class="btn btn-default" download>Download Angular 5 Sample Files</a>
             <a href="/corporate-ui-docs/corporate-ui/template/angular-basic-template.html" class="btn btn-default">View Angular JS Demo</a>
           <p>
           <p>So, that is basically that you'll need to know. There might of course be additional questions that you'll have and they will be swiftly answered in the <a href="https://corporate-ui.slack.com" target="_blank">corporate-ui.slack.com</a> channel, or perhaps not as quick, using standard <a href="mailto:corporate-ui@scania.com">e-mail</a>.</p>
