--- a/corporate-ui/frameworks/index.html
+++ b/corporate-ui/frameworks/index.html
@@ -81,7 +81,7 @@
           <p>When calling the <a href="https://static.scania.com/build/global/3.5.3/js/corporate-ui.jse" target="_blank">corporate-ui.js</a> file a lot of things happens. The latest versions of the Scania fonts, logotype, favicons and the basic CSS and HTML framework (Scania Bootstrap) is loaded as well as the Polymer library. We also load the basic Web Components used by almost all applications; the Corporate Header, the Main Navigation, the Main Content element and the Corporate Footer. This doesn't work very well when an application is about to be initiated further on.</p>
 
           <div class="alert alert-info"><strong>Angular 5 Sample files</strong> are now available. Check out the few lines that has to be added or altered in you application. <br/>
-          <a href="../corporate-ui/template/Angular5/src.zip" class="btn btn-default btn-sm margin-top" download>Download Angular 5 Sample Files</a> </div>
+          <a href="/corporate-ui-docs/corporate-ui/template/Angular5/src.zip" class="btn btn-default btn-sm margin-top" download>Download Angular 5 Sample Files</a> </div>
 
           <h2>Wait for the application!</h2>
           <p>All you have to do to make the Corporate UI work in your application is to avoid loading the basic components right away and instead include them after your application is completely initiated. You simply load the Corporate UI with the <strong>?preload=false</strong> parameter as you would load it in any HTML page header.</p>
