Removed script that wasn't used
- Removed ux-lib.css links in files since they weren't used
- Removed file that wasn't linked anywhere
- Removed css files that wasn't used

--- a/corporate-ui/contact-us.html
+++ b/corporate-ui/contact-us.html
@@ -1,26 +1,18 @@
 <!DOCTYPE html>
 <html lang="en-GB" class="corporate-ui">
 <head>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta charset="utf-8">
   <noscript><meta http-equiv="refresh" content="0;url=https://static.scania.com/vendors/components/pure-js/nonJS-browsers/1.0.0/nonJS-browsers.html"></noscript>
-
 
   <title>UX Library - Conctact Us</title>
   <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
 
-  <script src="https://static.scania.com/vendors/frameworks/jQuery/1.11.3/jquery-1.11.3.min.js"></script>   
   <script src="https://static.scania.com/build/global/3.5.3/js/corporate-ui.js?monitoring=true"></script>
 
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113165423-1"></script>  
-  <script src="/corporate-ui-docs/js/google-analytics.js"></script>  
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113165423-1"></script>
+  <script src="/corporate-ui-docs/js/google-analytics.js"></script>
 
-
-
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113165423-1"></script>  
-  <script src="/corporate-ui-docs/js/google-analytics.js"></script>  
-
-  <link rel="stylesheet" href="/corporate-ui-docs/css/ux-lib.css">
 </head>
 <!-- Need light for both body and section to make it match -->
 <body class="scania app light">
@@ -73,7 +65,7 @@
           <p>So, log in to <a href="https://corporate-ui.slack.com/">https://corporate-ui.slack.com</a> and there will be someone there to help you out. In other cases, please contact the Corporate UI support group.</p>
           <p>Haven't signed up to Slack yet? Do it here: <a href="https://corporate-ui.slack.com/signup">https://corporate-ui.slack.com/signup</a></p>
           <h2>Corporate UI Support</h2>
-          <p>The Corporate UI is partly developed and maintained by IXCC at Scania IT. We have a lot of stakeholders around the world as we build our components not to work only for Scania, but also for other companies in the VW group.</p>
+          <p>The Corporate UI is partly developed and maintained by IXCD at Scania. We have a lot of stakeholders around the world as we build our components not to work only for Scania, but also for other companies in the VW group.</p>
           <p>We need to listen closely to both our end users and the projects using our technology so please do not hesitate to contact us. Our services ranges from user research, introductory workshops and expert reviews to the planning and implementation of new components. We're available at <a href="mailto:corporate-ui@scania.com">corporate-ui@scania.com</a>.</p>
         </div>
       </article>
@@ -84,7 +76,6 @@
     <nav-item location="mailto:corporate-ui@scania.com">Contact</nav-item>
   </c-corporate-footer>
 
-  <script src="/corporate-ui-docs/js/ux-lib.js"></script>
 </body>
 </html>
 
