--- a/corporate-ui/index.html
+++ b/corporate-ui/index.html
@@ -116,6 +116,7 @@
     <nav-item><a href="https://github.com/scania/corporate-ui" target="_blank">Github</a></nav-item>
     <nav-item location="mailto:corporate-ui@scania.com">Contact</nav-item>
   </c-corporate-footer>
+  <c-cookie-message name="cookieMessage" text="hideMessage" path="/"></c-cookie-message>
 
 </body>
 </html>
