--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -111,9 +111,9 @@
           </div>
 
           <div class="col-md-4 col-sm-4 col-xs-12">
-            <a href="/corporate-ui-docs/styleguide/identity-manual/Scania Identity Manual_201609.pdf" target="_blank"><img src="/corporate-ui-docs/images/identity-manual.svg"></a>
+            <a href="https://teamroom.scania.com/share/proxy/alfresco/slingshot/node/content/workspace/SpacesStore/f198d8a5-60af-4d92-9407-a43bcfe180b0/Scania%20Identity%20Manual%20-%20Edition%202017-05.pdf" target="_blank"><img src="/corporate-ui-docs/images/identity-manual.svg"></a>
             <h4 class="">Identity Manual</h4>
-            <p>Whatever design elements from the UX Library that you're going to use, please see to it that it follows the guidelines found in the <a href="/corporate-ui-docs/styleguide/identity-manual/Scania Identity Manual_201609.pdf" target="_blank">Scania Identity Manual</a> as it is this manual that is reflected in the UX Library.</p>
+            <p>Whatever design elements from the UX Library that you're going to use, please see to it that it follows the guidelines found in the <a href="https://teamroom.scania.com/share/proxy/alfresco/slingshot/node/content/workspace/SpacesStore/f198d8a5-60af-4d92-9407-a43bcfe180b0/Scania%20Identity%20Manual%20-%20Edition%202017-05.pdf" target="_blank">Scania Identity Manual</a> as it is this manual that is reflected in the UX Library.</p>
           </div>
         </div>
 
