--- a/corporate-ui/index.html
+++ b/corporate-ui/index.html
@@ -9,7 +9,7 @@
   <title>UX Library - Developers</title>
   <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
 
-  <script src="https://static.scania.com/build/global/3.5.3/js/corporate-ui.js?monitoring=true"></script>
+  <script src="https://static.scania.com/build/global/3.5.3-1/js/corporate-ui.js?monitoring=true"></script>
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113165423-1"></script>
   <script src="/corporate-ui-docs/js/google-analytics.js"></script>
@@ -74,7 +74,7 @@
 
           <h2>Latest Version</h2>
           <p>We're aiming at doing weekley releases and usually the UX Library is the first site to run the latest stable version. Currently, you'll get all the latest updates by including this file on your page:</p>
-          <p class="text-info">https://static.scania.com/build/global/3.5.3/js/corporate-ui.js</p>
+          <p class="text-info">https://static.scania.com/build/global/3.5.3-1/js/corporate-ui.js</p>
 
           <h2>Ground-breaking improvement in Scania's reuse approach</h2>
           <p>With Custom Elements (a part of the Web Components standard) Scania developers and partner companies can use functionality "off the shelf", create new HTML tags or extend the components other developers have created.</p>
