--- a/mobile-apps/mobile-docs/mobile-docs.html
+++ b/mobile-apps/mobile-docs/mobile-docs.html
@@ -7,7 +7,7 @@
   <title>UX Library - Mobile Apps</title>
   <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
   <script src="https://static.scania.com/vendors/frameworks/jQuery/1.11.3/jquery-1.11.3.min.js"></script>
-  <script src="https://static.scania.com/build/global/3.5.3/js/corporate-ui.js"></script>
+  <script src="https://static.scania.com/build/global/3.5.3-1/js/corporate-ui.js"></script>
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113165423-1"></script>
   <script src="/corporate-ui-docs/js/google-analytics.js"></script>
