--- a/surveys/index.html
+++ b/surveys/index.html
@@ -7,7 +7,7 @@
 
   <title>Scania Suveys</title>
   <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
-  <script src="https://static.scania.com/build/global/3.5.3/js/corporate-ui.js"></script>
+  <script src="https://static.scania.com/build/global/3.5.3-1/js/corporate-ui.js"></script>
 
 </head>
 
