--- a/surveys/js-coding-standards/index.html
+++ b/surveys/js-coding-standards/index.html
@@ -7,7 +7,7 @@
 
   <title>Scania Suveys</title>
 
-  <script src="https://static.scania.com/build/global/3.5.3/js/corporate-ui.js"></script>
+  <script src="https://static.scania.com/build/global/3.5.3-1/js/corporate-ui.js"></script>
 
   <style>
     .container  {opacity:0}
