--- a/corporate-ui/index.html
+++ b/corporate-ui/index.html
@@ -51,6 +51,11 @@
             <nav-item location="/corporate-ui-docs/styleguide/typography/">Typography</nav-item>
           </sub-navigation>
         </nav-item>
+        <nav-item location="/corporate-ui-docs/corporate-ui-4/">Corporate UI 4
+          <sub-navigation caption="Corporate UI 4">
+            <nav-item location="/corporate-ui-docs/corporate-ui-4/">About</nav-item>
+          </sub-navigation>
+        </nav-item>
       </primary-items>
 
       <secondary-items>
@@ -60,34 +65,14 @@
 
     <style>
      article p a {font-family: 'Scania Sans Bold'}
-     .new-version,
-     .old-version {
-       padding-top: 15px;
-       margin-left: 20px;
-     }
-     .quick-links {
-       border: 1px solid #041EA0;
-       margin: 15px;
-       padding: 5px 10px;
-       /* width: 300px; */
-       position: fixed;
-     }
-
-     .new-version-article {
-       display: none;
-     }
     </style>
 
 
     <section class="light">
-      <div class="container-fluid">
-        <div class="col-lg-8 col-lg-offset-2 col-md-9 col-sm-9">
+      <div class="container">
+        <div class="col-lg-12 col-md-12 col-sm-12">
           <article>
-            <div class="old-version-article">
-              <div class="pull-right new-version">
-                <span class="badge badge-success">New</span>
-                <h5 class="pt-1"><a href="#corporate-ui-5">Corporate-ui 4.x</a></h5>
-              </div>
+            <div>
               <div>
                 <h1>Corporate UI 3.x</h1>
                 <h2 style="margin-top: 0 !important">Scania's Web Components Collection</h2>
@@ -133,79 +118,6 @@
               </ul>
             </div>
           </article>
-          <article>
-            <div class="new-version-article">
-              <div class="pull-right old-version">
-                <h5 class="pt-1"><a href="#corporate-ui-5">Corporate-ui 3.x</a></h5>
-              </div>
-              <div>
-                <h1>Corporate UI 4.x</h1>
-                <p class="lead">Corporate UI is in the final stages to release a major update, version 4.x. With it comes several improvements based on feedback and insights from the previous versions of Corporate UI. The goal to deliver a consistent styling combined with reusable components remains the same, but the way of achieving that goal has received a few changes.</p>
-                <h3>Web components</h3>
-                <p>
-                  The most prominent change is to the technology used to create Web components. In this version of Corporate UI it has been decided to move away from Google Polymer to StencilJS. The reason for this change is the request for a more simple, lightweight and future proof Corporate UI by the developer community.
-                  Stencil generates standard web component that works in any framework or no framework at all. The logic is now moved from the runtime to the compilation phase to optimize load time. With this technology it is now possible to import component as a module. In addition, web components now available as self-contained components where the styling is scoped within the components.
-                  More information about Web components can be found in the new Corporate UI 4 repository.
-                </p>
-                <p>
-                  <a href="#">Corporate Ui 4 repository</a>
-                </p>
-                <h3>Bootstrap Upgrade</h3>
-                <p>
-                  The most prominent change is to the technology used to create Web components. In this version of Corporate UI it has been decided to move away from Google Polymer to StencilJS. The reason for this change is the request for a more simple, lightweight and future proof Corporate UI by the developer community.
-                  Stencil generates standard web component that works in any framework or no framework at all. The logic is now moved from the runtime to the compilation phase to optimize load time. With this technology it is now possible to import component as a module. In addition, web components now available as self-contained components where the styling is scoped within the components.
-                  More information about Web components can be found in the new Corporate UI 4 repository.
-                </p>
-                <p>
-                  <a href="#">Read More</a>
-                </p>
-                <h3>Styling</h3>
-                <p>
-                  Another change that was made is the configuration for styling to deliver a better developer experience.
-                  The style theme has now been separated from Corporate UI in order to give developers better control of the theming.
-                  Separating the style theme from Corporate UI enables parallel updates to be made to the different repository’s.
-                  Furthermore it enables for additional brand themes to be created and added to apply on the Corporate UI components.
-                  Applying the themes is made easy by using a new component called c-theme. All assets such as favicons, fonts, logotype and wordmark is now also bundled together and available in the theme package.
-                  While Scania will stick to the theme approved and aligned with Scania Identity Guidelines, this welcome suggestions how to expand the current theme to areas of use that has special requirements.
-                  Check out Scania theme repository for a more detail documentation.
-                </p>
-                <p>
-                  <a href="#">Read More</a>
-                </p>
-                <h3>Distribution</h3>
-                <p>
-                    In addition to the CDN delivery, it is now possible to use Corporate UI and Scania theme as a package as it is available in NPM.
-                    This will enable projects to host assets from Corporate UI how they want without relying on an internet connection.
-                    Furthermore it will add flexibility to how they want to manipulate the package to fit their project’s needs.
-                </p>
-                <strong>CDN</strong>
-                <p>Add link to the script by adding the following to the <code>&lt;head&gt;</code>. Make sure to include scania-theme script BEFORE the corporate-ui script.</p>
-                <div>
-                  <code>&lt;script src="https://static.scania.com/build/global/themes/scania/1.x/scania-theme.js"&gt;&lt;/script&gt;</code>
-                </div>
-                <div>
-                  <code>&lt;script src=&quot;https://static.scania.com/build/global/4.x/corporate-ui.js&quot;&gt;&lt;/script&gt;</code>
-                </div>
-                <p>Replace x with <a href="#">available releases</a>.</p>
-                <div>
-                  <strong>NPM:</strong>
-                </div>
-                <p>
-                  <a href="#">Corporate-UI Npm package</a>
-                </p>
-              </div>
-            </div>
-          </article>
-        </div>
-        <div class="col-lg-2 col-md-3 col-sm-3">
-          <div class="quick-links">
-            <h4>Quick links</h4>
-            <h5 class="pt-1"><a href="#">Corporate-ui 3.x</a></h5>
-            <h5 class="pt-1"><a href="#">Corporate-ui 4.x</a></h5>
-            <h5 class="pt-1"><a href="#">Scania-theme</a></h5>
-            <h5 class="pt-1"><a href="#">Scania-theme</a></h5>
-            <h5 class="pt-1"><a href="#">Scania-theme</a></h5>
-          </div>
         </div>
       </div>
     </section>
@@ -217,22 +129,6 @@
   </c-corporate-footer>
   <c-cookie-message name="cookieMessage" text="hideMessage" path="/"></c-cookie-message>
 
-  <script>
-    var Tab = document.querySelector('.new-version a'),
-        Tab2 = document.querySelector('.old-version a');
-
-    Tab.addEventListener('click', function(){
-      console.log('click');
-      document.querySelector('.new-version-article').style.display = "block";
-      document.querySelector('.old-version-article').style.display = "none";
-    })
-
-    Tab2.addEventListener('click', function(){
-      console.log('click');
-      document.querySelector('.old-version-article').style.display = "block";
-      document.querySelector('.new-version-article').style.display = "none";
-    })
-  </script>
 </body>
 </html>
 
