Updating docs with new version information

--- a/corporate-ui/index.html
+++ b/corporate-ui/index.html
@@ -70,7 +70,7 @@
 
     <section class="light">
       <div class="container">
-        <div class="col-lg-12 col-md-12 col-sm-12">
+        <div class="col-lg-offset-1 col-lg-10 col-md-12 col-sm-12">
           <article>
             <div>
               <div>
