--- a/corporate-ui-4/index.html
+++ b/corporate-ui-4/index.html
@@ -6,7 +6,7 @@
   <noscript><meta http-equiv="refresh" content="0;url=https://static.scania.com/vendors/components/pure-js/nonJS-browsers/1.0.0/nonJS-browsers.html"></noscript>
 
 
-  <title>UX Library - Developers</title>
+  <title>Corporate-ui 4</title>
   <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
 
   <script src="https://static.scania.com/build/global/3.5.3-1/js/corporate-ui.js?monitoring=true"></script>
@@ -17,119 +17,90 @@
 </head>
 <body class="scania app">
 
- <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
+ <c-corporate-header site-name="Corporate UI 4" site-url="/corporate-ui-docs/">
   </c-corporate-header>
 
   <c-main-content>
-    <c-main-navigation>
-      <primary-items>
-        <nav-item location="/corporate-ui-docs/">Home</nav-item>
-        <nav-item location="/corporate-ui-docs/corporate-ui/">Corporate UI
-          <sub-navigation caption="Corporate UI">
-            <nav-item location="/corporate-ui-docs/corporate-ui/">About</nav-item>
-            <nav-item location="/corporate-ui-docs/corporate-ui/components/">Components</nav-item>
-            <nav-item location="/corporate-ui-docs/corporate-ui/html-copy-paste/" >HTML copy paste</nav-item>
-            <nav-item location="/corporate-ui-docs/corporate-ui/frameworks/">JS Frameworks</nav-item>
-            <nav-item location="/corporate-ui-docs/corporate-ui/faq/">FAQ</nav-item>
-            <nav-item location="/corporate-ui-docs/corporate-ui/contact-us.html">Contact Us</nav-item>
-          </sub-navigation>
-        </nav-item>
-        <nav-item location="/corporate-ui-docs/mobile-apps/">Mobile Apps
-          <sub-navigation caption="Mobile Apps">
-            <nav-item location="/corporate-ui-docs/mobile-apps/">Overview</nav-item>
-            <nav-item location="/corporate-ui-docs/mobile-apps/mobile-docs/mobile-docs.html">Documentation</nav-item>
-            <nav-item location="/corporate-ui-docs/mobile-apps/mobile-example/mobile-example.html">Example</nav-item>
-            <nav-item location="/corporate-ui-docs/mobile-apps/mobile-contact/mobile-contact.html">Contact us</nav-item>
-          </sub-navigation>
-        </nav-item>
-        <nav-item location="/corporate-ui-docs/styleguide/">Style Guide
-          <sub-navigation caption="Style Guide">
-            <nav-item location="/corporate-ui-docs/styleguide/">Home</nav-item>
-            <nav-item location="/corporate-ui-docs/styleguide/logotypes/">Logotype</nav-item>
-            <nav-item location="/corporate-ui-docs/styleguide/icons/">Icons</nav-item>
-            <nav-item location="/corporate-ui-docs/styleguide/colours/">Colours</nav-item>
-            <nav-item location="/corporate-ui-docs/styleguide/typography/">Typography</nav-item>
-          </sub-navigation>
-        </nav-item>
-        <nav-item location="/corporate-ui-docs/corporate-ui-4/" class="active">Corporate UI 4
-          <sub-navigation caption="Corporate UI 4">
-            <nav-item location="/corporate-ui-docs/corporate-ui-4/" class="active">About</nav-item>
-          </sub-navigation>
-        </nav-item>
-      </primary-items>
-
-      <secondary-items>
-          <nav-item> <a href="https://www.scania.com/ux-library/en/home.html" target="_blank">Comon editors<i class="fal fa-external-link ml-2"></i></a></nav-item>
-      </secondary-items>
-    </c-main-navigation>
-
     <style>
-     article p a {font-family: 'Scania Sans Bold'}
+     article section {
+      margin-top: 50px;
+     }
+     .back-link {
+       padding:20px;
+       font-weight: bold;
+     }
     </style>
 
-
     <section class="light">
+      <a class="back-link" href="/corporate-ui-docs/"><i class="scania-icon-menu-back-button sm"></i>Back to UX-library</a>
       <div class="container">
-        <div class="col-lg-12 col-md-12 col-sm-12">
+        <div class="col-lg-offset-1 col-lg-10 col-md-12 col-sm-12">
           <article>
-            <div>
+            <section class="mt-5">
+              <h1 style="display:inline-block;">Corporate UI 4.x <span style="vertical-align: bottom" class="label label-success">Beta</span></h1>
+              <p class="lead">Corporate UI is in the final stages to release a major update, version 4.x. With it comes several improvements based on feedback and insights from the previous versions of Corporate UI. The goal to deliver a consistent styling combined with reusable components remains the same, but the way of achieving that goal has received a few changes.</p>
+            </section>
+            <section>
+              <h3>Web components</h3>
+              <p>
+                The most prominent change is to the technology used to create Web components. In this version of Corporate UI it has been decided to move away from Google Polymer to StencilJS. The reason for this change is the request for a more simple, lightweight and future proof Corporate UI by the developer community.
+                Stencil generates standard web component that works in any framework or no framework at all. The logic is now moved from the runtime to the compilation phase to optimize load time. With this technology it is now possible to import component as a module. In addition, web components now available as self-contained components where the styling is scoped within the components.
+                More information about Web components can be found in the new Corporate UI 4 repository.
+              </p>
+            </section>
+            <section>
+              <h3>Bootstrap Upgrade</h3>
+              <p>
+                In this version Bootstrap will get a requested upgrade from Bootstrap 3 to Bootstrap 4.
+                This will bring a few changes to the elements available in the Corporate UI, where some frequently used elements like Panels will be replaced Cards.
+                However, in order to smooth the transition from bootstrap 3 to 4 an additional CSS that contains the deprecated elements will be provided.
+                Going forward the goal is to stay close to the latest stable version of Bootstrap available.
+              </p>
+            </section>
+            <section>
+              <h3>Styling</h3>
+              <p>
+                Another change that was made is the configuration for styling to deliver a better developer experience.
+                The style theme has now been separated from Corporate UI in order to give developers better control of the theming.
+                Separating the style theme from Corporate UI enables parallel updates to be made to the different repository’s.
+                Furthermore it enables for additional brand themes to be created and added to apply on the Corporate UI components.
+                Applying the themes is made easy by using a new component called c-theme. All assets such as favicons, fonts, logotype and wordmark is now also bundled together and available in the theme package.
+                While Scania will stick to the theme approved and aligned with Scania Identity Guidelines, this welcome suggestions how to expand the current theme to areas of use that has special requirements.
+                Check out Scania theme repository for a more detail documentation.
+              </p>
+              <p>
+                <a target="_blank" href="https://github.com/scania/corporate-ui-dev">Corporate UI 4 repository</a>
+              </p>
+              <p>
+                <a target="_blank" href="https://github.com/scania/scania-theme">Scania Theme repository</a>
+              </p>
+            </section>
+            <section>
+              <h3>Distribution</h3>
+              <p>
+                  In addition to the CDN delivery, it is now possible to use Corporate UI and Scania theme as a package as it is available in NPM.
+                  This will enable projects to host assets from Corporate UI how they want without relying on an internet connection.
+                  Furthermore it will add flexibility to how they want to manipulate the package to fit their project’s needs.
+              </p>
+              <strong>CDN</strong>
+              <p>Add link to the script by adding the following to the <code>&lt;head&gt;</code>. Make sure to include scania-theme script BEFORE the corporate-ui script.</p>
               <div>
-                <h1>Corporate UI 4.x</h1>
-                <p class="lead">Corporate UI is in the final stages to release a major update, version 4.x. With it comes several improvements based on feedback and insights from the previous versions of Corporate UI. The goal to deliver a consistent styling combined with reusable components remains the same, but the way of achieving that goal has received a few changes.</p>
-                <h3>Web components</h3>
-                <p>
-                  The most prominent change is to the technology used to create Web components. In this version of Corporate UI it has been decided to move away from Google Polymer to StencilJS. The reason for this change is the request for a more simple, lightweight and future proof Corporate UI by the developer community.
-                  Stencil generates standard web component that works in any framework or no framework at all. The logic is now moved from the runtime to the compilation phase to optimize load time. With this technology it is now possible to import component as a module. In addition, web components now available as self-contained components where the styling is scoped within the components.
-                  More information about Web components can be found in the new Corporate UI 4 repository.
-                </p>
-                <p>
-                  <a href="#">Corporate Ui 4 repository</a>
-                </p>
-                <h3>Bootstrap Upgrade</h3>
-                <p>
-                  The most prominent change is to the technology used to create Web components. In this version of Corporate UI it has been decided to move away from Google Polymer to StencilJS. The reason for this change is the request for a more simple, lightweight and future proof Corporate UI by the developer community.
-                  Stencil generates standard web component that works in any framework or no framework at all. The logic is now moved from the runtime to the compilation phase to optimize load time. With this technology it is now possible to import component as a module. In addition, web components now available as self-contained components where the styling is scoped within the components.
-                  More information about Web components can be found in the new Corporate UI 4 repository.
-                </p>
-                <p>
-                  <a href="#">Read More</a>
-                </p>
-                <h3>Styling</h3>
-                <p>
-                  Another change that was made is the configuration for styling to deliver a better developer experience.
-                  The style theme has now been separated from Corporate UI in order to give developers better control of the theming.
-                  Separating the style theme from Corporate UI enables parallel updates to be made to the different repository’s.
-                  Furthermore it enables for additional brand themes to be created and added to apply on the Corporate UI components.
-                  Applying the themes is made easy by using a new component called c-theme. All assets such as favicons, fonts, logotype and wordmark is now also bundled together and available in the theme package.
-                  While Scania will stick to the theme approved and aligned with Scania Identity Guidelines, this welcome suggestions how to expand the current theme to areas of use that has special requirements.
-                  Check out Scania theme repository for a more detail documentation.
-                </p>
-                <p>
-                  <a href="#">Read More</a>
-                </p>
-                <h3>Distribution</h3>
-                <p>
-                    In addition to the CDN delivery, it is now possible to use Corporate UI and Scania theme as a package as it is available in NPM.
-                    This will enable projects to host assets from Corporate UI how they want without relying on an internet connection.
-                    Furthermore it will add flexibility to how they want to manipulate the package to fit their project’s needs.
-                </p>
-                <strong>CDN</strong>
-                <p>Add link to the script by adding the following to the <code>&lt;head&gt;</code>. Make sure to include scania-theme script BEFORE the corporate-ui script.</p>
-                <div>
-                  <code>&lt;script src="https://static.scania.com/build/global/themes/scania/1.x/scania-theme.js"&gt;&lt;/script&gt;</code>
-                </div>
-                <div>
-                  <code>&lt;script src=&quot;https://static.scania.com/build/global/4.x/corporate-ui.js&quot;&gt;&lt;/script&gt;</code>
-                </div>
-                <p>Replace x with <a href="#">available releases</a>.</p>
-                <div>
-                  <strong>NPM:</strong>
-                </div>
-                <p>
-                  <a href="#">Corporate-UI Npm package</a>
-                </p>
+                <code>&lt;script src="https://static.scania.com/build/global/themes/scania/1.x/scania-theme.js"&gt;&lt;/script&gt;</code>
               </div>
-            </div>
+              <div>
+                <code>&lt;script src=&quot;https://static.scania.com/build/global/4.x/corporate-ui.js&quot;&gt;&lt;/script&gt;</code>
+              </div>
+              <p>Replace x with <a href="https://github.com/scania/corporate-ui-dev/releases">available releases</a>.</p>
+              <div>
+                <strong>NPM:</strong>
+              </div>
+              <p>
+                <a target="_blank" href="https://www.npmjs.com/package/corporate-ui-dev">Corporate UI package</a>
+              </p>
+              <p>
+                <a target="_blank" href="https://www.npmjs.com/package/scania-theme">Scania Theme package</a>
+              </p>
+            </section>
           </article>
         </div>
       </div>
